Add isNearby and base for polygon

--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
             <div class="toolbar">
                 <div class="tool">
                     <h2>New Object</h2>
-                    <button>Polygon</button>
+                    <button onclick="setPolygon()">Polygon</button>
                     <button>Polygon Strips</button>
                 </div>
                 <div class="tool">
