--- a/rectangle/rectangleCanvas.html
+++ b/rectangle/rectangleCanvas.html
@@ -10,6 +10,16 @@
     Scale Y
     <input id="scaleY" type="range" min="-10" max ="10" step="0.01" value="0">
   </div>
+  <select id="mymenu" size="7">
+    <option value="0">Black</option>
+    <option value="1">Red</option>
+    <option value="2">Yellow</option>
+    <option value="3">Green</option>
+    <option value="4">Blue</option>
+    <option value="5">Magenta</option>
+    <option value="6">Cyan</option>
+  </select>
+  <button id="Button1">Change Color</button>
 </div>
 <!-- vertex shader -->
 <script  id="vertex-shader-2d" type="x-shader/x-vertex">
