--- a/main.html
+++ b/main.html
@@ -25,6 +25,8 @@
                     <h2>New Object</h2>
                     <button onclick="setPolygon()">Polygon</button>
                     <button>Polygon Strips</button>
+                    <button>Line</button>
+                    <button>Square</button>
                 </div>
                 <div class="tool">
                     <h2>Properties</h2>
