tidying up code per shapes

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
                     <button onclick="setPolygon()">Polygon</button>
                     <button>Polygon Strips</button>
                     <button>Line</button>
-                    <button>Square</button>
+                    <button value = "square">Square</button>
                 </div>
                 <div class="tool">
                     <h2>Properties</h2>
