edit main.html web appearance

--- a/main.html
+++ b/main.html
@@ -25,8 +25,9 @@
                     <h2>New Object</h2>
                     <button onclick="setPolygon()">Polygon</button>
                     <button>Polygon Strips</button>
-                    <button>Line</button>
-                    <button value = "square">Square</button>
+                    <button onclick="setLine()">Line</button>
+                    <button onclick="setSquare()">Square</button>
+                    <button onclick="setRectangle()">Rectangle</button>
                 </div>
                 <div class="tool">
                     <h2>Properties</h2>
