--- a/rectangle/rectangleCanvas.html
+++ b/rectangle/rectangleCanvas.html
@@ -27,8 +27,6 @@ attribute vec2 a_position;
 
 uniform vec2 u_resolution;
 uniform vec2 u_scale;
-attribute vec3 vertColor;
-varying vec3 fragColor;
 
 void main() {
   // Scale the position
@@ -42,19 +40,18 @@ void main() {
 
   // convert from 0->2 to -1->+1 (clipspace)
   vec2 clipSpace = zeroToTwo - 1.0;
-  fragColor=vertColor;
+
   gl_Position = vec4(clipSpace * vec2(1, -1), 0, 1);
-  
 }
 </script>
 <!-- fragment shader -->
 <script  id="fragment-shader-2d" type="x-shader/x-fragment">
 precision mediump float;
 
-varying vec3 fragColor;
+uniform vec4 u_color;
 
 void main() {
-   gl_FragColor = vec4(fragColor,1.0);
+   gl_FragColor = u_color;
 }
 </script>
 <script src="../webgl-utils-fund.js"></script>
