--- a/main.html
+++ b/main.html
@@ -44,6 +44,19 @@
                 </div>
                 <div class="tool">
                     <h2>Utilities</h2>
+                        <div>
+                            <select id="mymenu" class="mymenu" size="7">
+                                <option class="mymenu" value="0">Black</option>
+                                <option class="mymenu" value="1">Red</option>
+                                <option class="mymenu" value="2">Yellow</option>
+                                <option class="mymenu" value="3">Green</option>
+                                <option class="mymenu" value="4">Blue</option>
+                                <option class="mymenu" value="5">Magenta</option>
+                                <option class="mymenu" value="6">Cyan</option>
+                            </select>
+                            <button id="Button1">Change Color</button>
+                        </div>
+                        
                 </div>
             </div>
         </div>
