Move add vertice

--- a/main.html
+++ b/main.html
@@ -28,6 +28,7 @@
                     <button onclick="setLine()">Line</button>
                     <button onclick="setSquare()">Square</button>
                     <button onclick="setRectangle()">Rectangle</button>
+                    <button onClick="choose()">Cursor</button>
                 </div>
                 <div class="tool">
                     <h2>Properties</h2>
@@ -41,9 +42,6 @@
                             <input id="scaleY" type="range" min="-10" max ="10" step="0.01" value="0">
                             </div>
                         </div>
-                </div>
-                <div class="tool">
-                    <h2>Utilities</h2>
                         <div>
                             <select id="mymenu" class="mymenu" size="7">
                                 <option class="mymenu" value="0">Black</option>
@@ -55,7 +53,12 @@
                                 <option class="mymenu" value="6">Cyan</option>
                             </select>
                             <button id="Button1">Change Color</button>
+                            <button id="test">Log</button>
                         </div>
+                </div>
+                <div class="tool">
+                    <h2>Utilities</h2>
+                        
                         
                 </div>
             </div>
