add change shape and vertex color

--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
     <div class="row">
         <div class="column left">
             <h1>Daftar Objek</h1>
+            <ul id="listObjek"></ul>
         </div>
         <div class="column middle">
             <canvas id="canvas" onmousemove="mouseMoveListener(event)" width="750px" height="750px"></canvas>
