--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
                 <div class="tool">
                     <h2>New Object</h2>
                     <div class="button-group">
-                        <button class="polygonBtn" onclick="setPolygon()">Polygon</button>
+                        <button id="polygonBtn" onclick="setPolygon()">Polygon</button>
                         <button>Polygon Strips</button>
                         <button onclick="setLine()">Line</button>
                         <button onclick="setSquare()">Square</button>
