--- a/main.html
+++ b/main.html
@@ -62,6 +62,10 @@
                 </div>
                 <div class="tool">
                     <h2>Utilities</h2>
+                    <div class="button-saveload">
+                        <button id="save">Save</button>
+                        <input type="file" id="load" accept=".json,application/json">
+                    </div>
                     <p class="log"></p>
                 </div>
             </div>
