make configuration for save

--- a/main.html
+++ b/main.html
@@ -63,6 +63,7 @@
                 <div class="tool">
                     <h2>Utilities</h2>
                     <div class="button-saveload">
+                        <input type="text" id="filename" placeholder="Create New Title">
                         <button id="save">Save</button>
                         <input type="file" id="load" accept=".json,application/json">
                     </div>
