--- a/main.html
+++ b/main.html
@@ -26,7 +26,6 @@
                     <h2>New Object</h2>
                     <div class="button-group">
                         <button id="polygonBtn" onclick="setPolygon()">Polygon</button>
-                        <button>Polygon Strips</button>
                         <button onclick="setLine()">Line</button>
                         <button onclick="setSquare()">Square</button>
                         <button onclick="setRectangle()">Rectangle</button>
@@ -59,10 +58,24 @@
                             </select>
                             <button id="changeColor">Change Color</button>
                         </div>
+                        <div>
+                            <h3>Polygon Vertices</h3>
+                            <button id="addVertexBtn" onclick="addVertex()">Add Vertex</button>
+                            <button id="delVertexBtn" onclick="delVertex()">Delete Vertex</button>
+                        </div>
+                        <div>
+                            <h3>Transformation</h3>
+                            <button id="moveBtn" onclick="move()">Move</button>
+                            <button id="scaleBtn" onclick="scale()">Scale</button>
+                        </div>
                 </div>
                 <div class="tool">
                     <h2>Utilities</h2>
-                    <p class="log"></p>
+                    <div>
+                        <p id="log"></p>
+                        <h3>Current focus:</h3>
+                        <p id="current"></p>
+                    </div>
                 </div>
             </div>
         </div>
